--- a/picom/.config/picom.conf
+++ b/picom/.config/picom.conf
@@ -1,197 +1,35 @@
-# Basics
-# backend = "xrender";
-# backend = "glx";
 backend = "glx";
-experimental-backends = true;
-log-level = "info";
+glx-no-stencil = true;
 vsync = false;
-
-# Rounded Corners
-corner-radius = 12.0;
-round-borders = 1;
-
-rounded-corners-exclude = [
-  #"window_type = 'normal'",
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "window_type = 'tooltip'",
-  "class_g = 'Polybar'",
-  "class_g = 'i3bar'",
-  "class_g = 'Xfce4-panel'",
-  "class_g = 'i3-frame'",
-  #"class_g = 'firefox-nightly'",
-  #"class_g = 'Deadd-notification-center'",
-  "class_g = 'xob'"
-];
-
-round-borders-exclude = [
-  #"class_g = 'TelegramDesktop'",
-];
-
-round-borders-rule = [
-  "4:class_g      = 'Deadd-notification-center'",
-  "5:class_g      *= ''", # Everything
-  "4:class_g      = 'Vmware'",
-  "4:class_g      = 'Dunst'",
-  "4:class_g      = 'Spotify'",
-  "4:class_g      = 'RAIL'",
-  "4:class_g      = 'xfreerdp'",
-  "4:class_g      = 'Firefox'",
-  "4:class_g      = 'Nightly'",
-  "4:class_g      = 'XTerm'",
-  "4:class_g      = 'URxvt'",
-  "4:class_g     = 'Alacritty'",
-  "4:class_g     = 'Signal'"
-];
-
-blue = false;
-blur: {
-  # requires: https://github.com/ibhagwan/picom
-  method = "dual_kawase";
-  #method = "kernel";
-  strength = 3;
-  # deviation = 1.0;
-  # kernel = "11x11gaussian";
-  background = false;
-  background-frame = false;
-  background-fixed = false;
-  kern = "3x3box";
-}
-
-blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "class_g = 'mpv'",
-  #"window_type = 'dock'",
-  #"window_type = 'desktop'",
-  #"class_g = 'urxvt'",
-  #
-  # prevents picom from blurring the background
-  # when taking selection screenshot with `main`
-  # https://github.com/naelstrof/maim/issues/130
-  "class_g = 'slop'",
+unredir-if-possible = true;
+ 
+# Shadow
+shadow = true; # Enabled client-side shadows on windows.
+shadow-radius = 7; # The blur radius for shadows. (default 12)
+shadow-offset-x = -7; # The left offset for shadows. (default -15)
+shadow-offset-y = -7; # The top offset for shadows. (default -15)
+shadow-exclude = [
+  "n:e:Notification",
+  "n:e:Docky",
+  "g:e:Synapse",
+  "g:e:Conky",
+  "n:w:*Firefox*",
+  "n:w:*Chromium*",
+  "n:w:*dockbarx*",
+  "class_g ?= 'Cairo-dock'",
+  "class_g ?= 'Xfce4-notifyd'",
+  "class_g ?= 'Xfce4-power-manager'",
+  "class_g ?= 'Notify-osd'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
-
-# Shadows
-shadows = true;
-#no-dnd-shadow = true;
-#no-dock-shadow = true;
-shadow-radius = 12;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
-#shadow-opacity = 1;
-#shadow-red = 0.00;
-#shadow-green = 0.00;
-#shadow-blue = 0.00;
-shadow-color = "#000000"
-shadow-exclude = [
-	#"! name=''",
-	"name = 'Plank'",
-	"name = 'Notification'",
-	"class_g = 'Conky'",
-	"class_g ?= 'Notify-osd'",
-	"class_g = 'Cairo-clock'",
-#	"_GTK_FRAME_EXTENTS@:c"
-];
-shadow-ignore-shaped = false;
-
-# Fading
-fading = true;
-fade-in-step = 0.03;
-fade-out-step = 0.03;
-fade-exclude = [
-  "class_g = 'slop'",   # maim
-  "class_g = 'mpv'"
-]
-
-focus-exclude = [
-	"class_g = 'slop'"
-];
-
-#inactive-opacity = 0.8;
-# frame-opacity = 0.7; # mpv titlebar fucks up
-frame-opacity = 1;
-inactive-opacity-override = false;
-
-opacity-rule = [
-  "100:_NET_WM_STATE@:32a = '_NET_WM_STATE_FULLSCREEN'",
-  "80:class_g     = 'Bar'",             # lemonbar
-  "100:class_g    = 'slop'",            # maim
-  "100:class_g    = 'XTerm'",
-  "100:class_g    = 'URxvt'",
-  "100:class_g    = 'kitty'",
-  "100:class_g    = 'Alacritty'",
-  "100:class_g = 'mpv'",
-  "80:class_g     = 'Polybar'",
-  "100:class_g    = 'code-oss'",
-  "100:class_g    = 'Meld'",
-  "70:class_g     = 'TelegramDesktop'",
-  "90:class_g     = 'Joplin'",
-  "100:class_g = 'firefox'",
-  "100:class_g = 'Code'",
-  "100:class_g = 'zoom'",,
-  "100:class_g    = 'Thunderbird'",
-];
-
-# Try to detect WM windows (a non-override-redirect window with no 
-# child that has 'WM_STATE') and mark them as active.
-#
-# mark-wmwin-focused = false
-mark-wmwin-focused = true;
-
-# Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
-# mark-ovredir-focused = false
-mark-ovredir-focused = true;
-
-# Try to detect windows with rounded corners and don't consider them 
-# shaped windows. The accuracy is not very high, unfortunately.
-#
-# detect-rounded-corners = false
-detect-rounded-corners = true;
-
-# Detect '_NET_WM_OPACITY' on client windows, useful for window managers
-# not passing '_NET_WM_OPACITY' of client windows to frame windows.
-#
+ 
+# Opacity
 detect-client-opacity = true;
-# detect-client-opacity = true;
-
-# Specify refresh rate of the screen. If not specified or 0, picom will 
-# try detecting this with X RandR extension.
-#
-# refresh-rate = 60
-refresh-rate = 0;
-use-damage = true;
-
-# Use 'WM_TRANSIENT_FOR' to group windows, and consider windows 
-# in the same group focused at the same time.
-#
-# detect-transient = false
-detect-transient = true;
-
-# Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same 
-# group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if 
-# detect-transient is enabled, too.
-#
-# detect-client-leader = false
-detect-client-leader = true;
-
+ 
+# Window type settings
 wintypes:
 {
-  normal = { fade = false; shadow = true; }
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; }
-  dnd = { shadow = true; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
-};
-
-wintypes:
-{
-  #normal = { blur = 0; opacity = 1.0; fade = false; shadow = true; }
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
-};
+  dock = { shadow = false; };
+  dnd = { shadow = false; };
+  tooltip = { shadow = false; };
+ };
