--- a/aconfmgr/.config/aconfmgr/files/etc/pacman.conf
+++ b/aconfmgr/.config/aconfmgr/files/etc/pacman.conf
@@ -80,11 +80,11 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
-[core-x86-64-v3]
-Include = /etc/pacman.d/alhp-mirrorlist
+#[core-x86-64-v3]
+#Include = /etc/pacman.d/alhp-mirrorlist
 
-[extra-x86-64-v3]
-Include = /etc/pacman.d/alhp-mirrorlist
+#[extra-x86-64-v3]
+#Include = /etc/pacman.d/alhp-mirrorlist
 
 
 
