--- a/aconfmgr/.config/aconfmgr/files/etc/pacman.conf
+++ b/aconfmgr/.config/aconfmgr/files/etc/pacman.conf
@@ -125,17 +125,17 @@ Include = /etc/pacman.d/mirrorlist
 [chaotic-aur]
 Include = /etc/pacman.d/chaotic-mirrorlist
 
-[archzfs]
-# Mirror - US
-Server = https://zxcvfdsa.com/archzfs/$repo/$arch
-# Origin Server - France
-Server = http://archzfs.com/$repo/x86_64
-# Mirror - Germany
-Server = http://mirror.sum7.eu/archlinux/archzfs/$repo/x86_64
-# Mirror - Germany
-Server = https://mirror.biocrafting.net/archlinux/archzfs/$repo/x86_64
-# Mirror - India
-Server = https://mirror.in.themindsmaze.com/archzfs/$repo/x86_64
+; [archzfs]
+; # Mirror - US
+; Server = https://zxcvfdsa.com/archzfs/$repo/$arch
+; # Origin Server - France
+; Server = http://archzfs.com/$repo/x86_64
+; # Mirror - Germany
+; Server = http://mirror.sum7.eu/archlinux/archzfs/$repo/x86_64
+; # Mirror - Germany
+; Server = https://mirror.biocrafting.net/archlinux/archzfs/$repo/x86_64
+; # Mirror - India
+; Server = https://mirror.in.themindsmaze.com/archzfs/$repo/x86_64
 
 
 [blackarch]
